[tool.poetry]
name = "cookie-traverser"
version = "0.1.0"
description = "A tool to traverse domains and get cookies."
authors = ["Gustaw Fit <gustaw.fit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cookie_traverser.main:run"
